# cargo-sane

./: .deepsource.toml  .gitignore  AUDIT.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  RELEASE.md  output.txt  test-simple.toml
docs/: index.html
src/: lib.rs  main.rs
src/analyzer/: checker.rs  conflicts.rs  health.rs  mod.rs
src/cli/: commands.rs  mod.rs  output.rs
src/core/: config.rs  dependency.rs  manifest.rs  mod.rs  version.rs
src/updater/: mod.rs  resolver.rs  update.rs
src/utils/: cargo.rs  crates_io.rs  formatting.rs  mod.rs
tests/: clean_command.rs  common.rs  config.rs  fix_command.rs  health_command.rs  update_command.rs
