[package]
name = "cargo-sane"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Stop losing your mind over Rust dependency conflicts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/cargo-sane"
homepage = "https://github.com/yourusername/cargo-sane"
documentation = "https://docs.rs/cargo-sane"
readme = "README.md"
keywords = ["cargo", "dependencies", "cli", "tools", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Version handling
semver = { version = "1.0", features = ["serde"] }

# Async runtime (for future use)
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cargo-sane"
path = "src/main.rs"

[lib]
name = "cargo_sane"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1