[package]
name = "cargo-sane"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Stop losing your mind over Rust dependency conflicts"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/cargo-sane"
homepage = "https://github.com/yourusername/cargo-sane"
documentation = "https://docs.rs/cargo-sane"
readme = "README.md"
keywords = ["cargo", "dependencies", "cli", "tools", "rust"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5.50", features = ["derive", "cargo"] }
colored = "3.0.0"
indicatif = "0.18.1"
dialoguer = "0.12.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# HTTP Client
reqwest = { version = "0.12.24", features = ["json", "blocking"] }

# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Version handling
semver = { version = "1.0.27", features = ["serde"] }

# Async runtime (for future use)
tokio = { version = "1.47.2", features = ["full"], optional = true }
regex = "1.12.2"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "cargo-sane"
path = "src/main.rs"

[lib]
name = "cargo_sane"
path = "src/lib.rs"

[profile.release]
strip = true
lto = true
codegen-units = 1
